[package]
name        = "backend-python"
version     = "0.1.0"
edition     = "2021"
description = "Python code-generation backend for cddlc (cbor2 runtime)"
license     = "MIT OR Apache-2.0"

[lib]
name = "backend_python"
path = "src/lib.rs"

[dependencies]
cddlc-ir      = { path = "../cddlc-ir" }
cddlc-codegen = { path = "../cddlc-codegen" }
smol_str      = "0.2"

[dev-dependencies]
cddlc-parser  = { path = "../cddlc-parser" }
pretty_assertions = "1"
